# c-algorithm

./: .gitignore  CMakeLists.txt  Makefile
include/: _test.h  array-list.h  boolean.h  collection.h  exception.h  iterator.h  list.h  test.h
src/: test.c
src/collection/: collection.c
src/collection/list/: array-list.c  list-iterator.c  list.c
test/collection/: collection-test.c  collection-test.h
test/collection/list/: array-list-test.c  array-list-test.h  list-test.c  list-test.h
